--- a/BANDS-cfg.yml
+++ b/BANDS-cfg.yml
@@ -8,5 +8,7 @@ eureka:
     metadata-map:
       zone: ru-1
   client:
+    registerWithEureka: false
+    fetchRegistry: false
     service-url:
       defaultZone: http://localhost:8762/eureka
