--- a/UTIL-cfg.yml
+++ b/UTIL-cfg.yml
@@ -8,6 +8,8 @@ eureka:
     metadata-map:
       zone: ru-1
   client:
+    registerWithEureka: false
+    fetchRegistry: false
     service-url:
       defaultZone: http://localhost:8762/eureka
 
